# serializer version: 1
# name: test_compile[YAMLConfigFile-20240323]
  '''
  {'notes': [{'areas': ['gtd'],
              'body': '#gtd pomodoro',
              'child_note_ids': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDatetime(2024, 3, 23, 0, 0),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': [],
              'properties': {'p': '1'},
              'todo_payload': None,
              'zid': None},
             {'areas': ['own'],
              'body': '#own Buy rubber duck',
              'child_note_ids': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDatetime(2024, 3, 23, 0, 0),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': [],
              'properties': {'p': '2'},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': '+zorg Parametrize test_run_compile()',
              'child_note_ids': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDatetime(2024, 3, 23, 0, 0),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': ['zorg'],
              'properties': {'p': '2'},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': '+zorg Move models.py and file_groups.py',
              'child_note_ids': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDatetime(2024, 3, 23, 0, 0),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': ['zorg'],
              'properties': {'p': '3'},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': '+zorg Add links to grammar',
              'child_note_ids': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDatetime(2024, 3, 23, 0, 0),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': ['zorg'],
              'properties': {'p': '3'},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': '+zorg Fix grammar so it works with this file',
              'child_note_ids': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDatetime(2024, 3, 23, 0, 0),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': ['zorg'],
              'properties': {'p': '4'},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': '+zorg Add this file to test data',
              'child_note_ids': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDatetime(2024, 3, 23, 0, 0),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': ['zorg'],
              'properties': {'p': '5'},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': '+zorg Filter out all numeric tag names',
              'child_note_ids': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDatetime(2024, 3, 23, 0, 0),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': ['zorg'],
              'properties': {'p': '5'},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': '+zorg Test against all examples/ files',
              'child_note_ids': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDatetime(2024, 3, 23, 0, 0),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': ['zorg'],
              'properties': {'p': '6'},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': "+zorg wip: Replace 'john@' with '%john'",
              'child_note_ids': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDatetime(2024, 3, 23, 0, 0),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': ['zorg'],
              'properties': {'p': '6'},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': '+laundry dry whites',
              'child_note_ids': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDatetime(2024, 3, 23, 0, 0),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': ['laundry'],
              'properties': {'p': '7'},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': '+zorg wip: migrate people',
              'child_note_ids': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDatetime(2024, 3, 23, 0, 0),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': ['zorg'],
              'properties': {'p': '7'},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': "+zorg Finished 'john@' to '%john' migration",
              'child_note_ids': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDatetime(2024, 3, 23, 0, 0),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': ['zorg'],
              'properties': {'p': '8'},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': '+zorg Updated grammar to handle quotes',
              'child_note_ids': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDatetime(2024, 3, 23, 0, 0),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': ['zorg'],
              'properties': {'p': '9'},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': '+laundry wip: fold darks',
              'child_note_ids': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDatetime(2024, 3, 23, 0, 0),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': ['laundry'],
              'properties': {'p': '10'},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': '+laundry fold darks',
              'child_note_ids': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDatetime(2024, 3, 23, 0, 0),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': ['laundry'],
              'properties': {'p': '11'},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': '+laundry wash delicates',
              'child_note_ids': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDatetime(2024, 3, 23, 0, 0),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': ['laundry'],
              'properties': {'p': '12'},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': '+zorg [[xmind/zorg_e2e_query_arch.xmind]]',
              'child_note_ids': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDatetime(2024, 3, 23, 0, 0),
              'links': ['xmind/zorg_e2e_query_arch.xmind'],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': ['zorg'],
              'properties': {'p': '14'},
              'todo_payload': None,
              'zid': None}]}
  
  '''
# ---
# name: test_compile[YAMLConfigFile-basic]
  '''
  {'notes': [{'areas': [],
              'body': 'First note in first block',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': [],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Second note in first block',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': [],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': ' bazbuz is ok too...',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': [],
              'properties': {},
              'todo_payload': {'priority': 'C',
                               'status': <NoteStatus.OPEN_TODO: 2>},
              'zid': None}]}
  
  '''
# ---
# name: test_compile[YAMLConfigFile-links]
  '''
  {'notes': [{'areas': [],
              'body': 'Some note with a [[bar.sh]] link to a bash script.',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': ['bar.sh'],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': [],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Some note with a link in parens (see [[baz]]).',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': ['baz'],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': [],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Some note with a link in parens and a block-level link '
                      '([[buz::fuzz]]).',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': ['buz::fuzz'],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': [],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Some note that references an old 200101#12 ZID.',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': [],
              'properties': {},
              'todo_payload': None,
              'zid': None}]}
  
  '''
# ---
# name: test_compile[YAMLConfigFile-multiblocks]
  '''
  {'notes': [{'areas': [],
              'body': ' Some todo',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': [],
              'properties': {},
              'todo_payload': {'priority': 'C',
                               'status': <NoteStatus.OPEN_TODO: 2>},
              'zid': None},
             {'areas': [],
              'body': ' Another related todo',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': [],
              'properties': {},
              'todo_payload': {'priority': 'C',
                               'status': <NoteStatus.OPEN_TODO: 2>},
              'zid': None},
             {'areas': [],
              'body': 'A note about life...',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': [],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': ' Some other todo',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': [],
              'properties': {},
              'todo_payload': {'priority': 'C',
                               'status': <NoteStatus.OPEN_TODO: 2>},
              'zid': None},
             {'areas': [],
              'body': 'With a note',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': [],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Some note in section 0',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': [],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Note A1',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': [],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Note A2',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': [],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Note B',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': [],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Note C',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': [],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Note D',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': [],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Note E',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': [],
              'properties': {},
              'todo_payload': None,
              'zid': None}]}
  
  '''
# ---
# name: test_compile[YAMLConfigFile-priority]
  '''
  {'notes': [{'areas': [],
              'body': ' 2024-03-13 High Priority TODO',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDatetime(2024, 3, 13, 0, 0),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': [],
              'properties': {},
              'todo_payload': {'priority': 'A',
                               'status': <NoteStatus.OPEN_TODO: 2>},
              'zid': None},
             {'areas': [],
              'body': ' 2024-03-13 Medium Priority TODO',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDatetime(2024, 3, 13, 0, 0),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': [],
              'properties': {},
              'todo_payload': {'priority': 'B',
                               'status': <NoteStatus.OPEN_TODO: 2>},
              'zid': None},
             {'areas': [],
              'body': ' 2024-03-13 Low Priority TODO',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDatetime(2024, 3, 13, 0, 0),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': [],
              'properties': {},
              'todo_payload': {'priority': 'C',
                               'status': <NoteStatus.OPEN_TODO: 2>},
              'zid': None}]}
  
  '''
# ---
# name: test_compile[YAMLConfigFile-property]
  '''
  {'notes': [{'areas': [],
              'body': '2024-03-30 This note contains a key::value pair.',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDatetime(2024, 3, 30, 0, 0),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': [],
              'properties': {'key': 'value', 'p': '1'},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': ' This todo is @due today! | due::2024-03-13',
              'child_note_ids': [],
              'contexts': ['due'],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': [],
              'properties': {'due': '2024-03-13', 'p': '1'},
              'todo_payload': {'priority': 'C',
                               'status': <NoteStatus.OPEN_TODO: 2>},
              'zid': None}]}
  
  '''
# ---
# name: test_compile[YAMLConfigFile-scrambled_prj_notes]
  '''
  {'notes': [{'areas': [],
              'body': 'Sqtdicu Gfwebkj: fdxd://rd/czge-nxgz-vmuncaf',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Reqzlu Zkba Inzlqq Zusqxur: '
                      'pclx://hn/oqdu-syxf-oxzpzp-hxdszea',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Tzus %clyzajrm: +cmeq ylevgv frxb gevcfp xa 26cb',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': ['clyzajrm'],
              'prev_note_id': None,
              'projects': ['arms', 'cmeq'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Eongcgfy tho pscz giwq arjebc@?',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'saxy'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Crxekimyx kq fjboaq:',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'saxy'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Lcnoajccb Injdqwlf',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': 5,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'saxy'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Lrry-Jhfv Nfsw',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': 5,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'saxy'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Ga Ewwnanwqgoq',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': 5,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'saxy'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Gaonrjmk: Cbnuev, Xvdgisy, Aeyfbb?',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': 5,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'saxy'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Vont ywgotqe vndsv (lfqbnlfar, kwmnafb, '
                      'Yneicgqi/Mxvvkclvzk)',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': 5,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'saxy'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Eyfptapyh ijmfacppn (lqrui ?jr=HF)',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': 5,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'saxy'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Gziien fxfmhul',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': 5,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'saxy'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Ajfn dz Rhyt (ty 6499 cw 6075)',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': 5,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'saxy'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'setw://fq/zfv-haow-micxv',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'judo', 'vfntwi'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'sorj',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'judo', 'vfntwi'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'bhkh://xzywfi3/relyocplej/dpw/qk/otehzx/qpsiyunh/rgthilw_sldeu/fonvlqflxv/rjluzb/tbf/hrtkdrq_mnurg_eltj_szkb.raja',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': 15,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'judo', 'vfntwi'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'knlo://evfkaz3/kmxgifnodz/wav/nz/idlwsr/oslzcscp/raarqgi_bjfdp/xftsdpbcka/itulza/prk/pkgxzoc_zgntm_txeg_npbvju.jldf',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': 15,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'judo', 'vfntwi'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'ykseciqhy IG: bp/531522711',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'judo', 'vennc'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Nyhha trra://hk/wyp-slg-lbyuqz pris oiqf nywj kg smoy '
                      'nwdraivpht() cu jzusgcwm zwyirs?',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'bmlakcr'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Wouvp rx cmmi jk zes r kv/u1abtunoeaorevyolmef: "Njwb '
                      'opjiv wlyvyfrb; tqcwkrs qlawalk: 200F."',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'bmlakcr', 'lozmhqjd'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'e2.0 xrestv rlqt cszmjhp: 1) Cnelcge 2) uttnzeu tncj 3) '
                      'Rasemja zzvilcys',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'bmlakcr', 'wjybwa'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Qtvhtfc ywtyvbppqu (qs odvqdfjk nydxt):',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'bmlakcr', 'wjybwa'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'XC: Wvlotmog | Akjrgluk cck dpvcvia',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': 22,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'bmlakcr', 'wjybwa'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Oers Higwy   | NYS / Cyuxu fyod mrfwalatc',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': 22,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'bmlakcr', 'wjybwa'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Lveg         | Kfvunvqioefmgo Rlqu',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': 22,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'bmlakcr', 'wjybwa'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'HU: Yoxlnl   | Kyahuurpzq mt VV (v.u. boh coveshbg rsp '
                      'hbyhmm-pav)',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': 22,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'bmlakcr', 'wjybwa'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'TbuburbQuf zilo '
                      'hpfu://wz/ytg:hep_epzc_ek_jehnmz?h=omm:cpdu :\n'
                      '    (2576796, 2584174, 2585902, 2611556, 2612222)',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'jws_pkaft'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Kmue izlgeghae jivs kkhoh:\n'
                      '    (23068288959, 23070555923, 23071198233, 23081557400, '
                      '23082128453)',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'jws_pkaft'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'KU onbf',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'owwnfb', 'qbsum'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Adah wv wsr: Pwyv qrykrmat',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': 29,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'owwnfb', 'qbsum'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Fjdu lk aozqwmt rdtv (ingu yhlzh kha zro zstolomj?): '
                      'Vujflym',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': 29,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'owwnfb', 'qbsum'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Cyuyngz rpzj (<tzcx_zm> nat <iqge_xqu>): Opalekb / Ubq '
                      'hefcgpa',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': 29,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'owwnfb', 'qbsum'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Snke udr djwhji ku iysauiroj (<wtflgi_jw_aykjvl>):',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': 29,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'owwnfb', 'qbsum'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Puny mng lomkrpd',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': 33,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'owwnfb', 'qbsum'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Eipahnv',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': 33,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'owwnfb', 'qbsum'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': '<olxh_cqe>',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': 33,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'owwnfb', 'qbsum'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Fe dxiovcyxz kuirhi: Kjwjjl hxd: '
                      '<lllwcz_bp_mjklvt>\\wZkzuguo/yckqyt: <awqxbdj>',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': 33,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'owwnfb', 'qbsum'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Nid bzvqqd gktb uhwgmwk jfiwf atukar oq znzg-htqz bpba?: '
                      '(<izljyv_dk_ebsiqu>)',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': 33,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'owwnfb', 'qbsum'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Poxi hdtlblgq:',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': 33,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'owwnfb', 'qbsum'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Uripbc uui qr njuytfkxf',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': 39,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'owwnfb', 'qbsum'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Dvfbqlk/ignpsr lb imwgiazpd',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': 39,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'owwnfb', 'qbsum'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Rb rnfqqbizlps',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': 39,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'owwnfb', 'qbsum'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Wuxpotyb:',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'owwnfb', 'qbsum'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Me fkf zddkb?',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': 43,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'owwnfb', 'qbsum'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'An fsqw hdegvhwy?',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': 43,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'owwnfb', 'qbsum'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Tyrgbh iwj fcq jjuea qpltzla rkyq br at DS tfvwjwf?',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'owwnfb', 'qbsum'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Rmy [[eswz_xqow::empiz_ljyiwjbmi_szstj]]',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': ['eswz_xqow::empiz_ljyiwjbmi_szstj'],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'rgw_sxtvx'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'nejo/vpe/gjggaa/fwi/kgrtqhtdy/ynbwnm/qekadk/cvhc/MqgomkswAgbkGhthPoqfvqt.ednt',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'rgw_sxtvx', 'zv_jzdd_djqa'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'qiuz/adb/lhwggp/kqt/ldmqosmbs/qtjvrxutayfiyh/oocyfjbnuih/jmov/faaat/XibsjbhuFsbuRrawDgfksjcXwjudTvvzbxa.vvep',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'rgw_sxtvx', 'zv_jzdd_djqa'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Ajbss udcor xf tylgpk:',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'bqf', 'cpv_mociy', 'ipyt'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'ibmxadcdz.iwmdvsxeg_uxzvuntgl',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': 50,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'bqf', 'cpv_mociy', 'ipyt'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'oiuglzpuv.xwhjvfwrs_imjxfgwoo.fvyclrkt_vqycmgeuj_ihblc',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': 50,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'bqf', 'cpv_mociy', 'ipyt'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'ycdcddvhw.shmlpcnju_chsokpadf.bcpgad_hoargfl_fhzshiqoe_qrsrxtdsq',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': 50,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'bqf', 'cpv_mociy', 'ipyt'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'bpeijqkwt.ysazfxpem_tnpnkohdy.nppowgku_kqhexqeih_njhno',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': 50,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'bqf', 'cpv_mociy', 'ipyt'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'uceq://ap/591285707',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'bqf', 'ipyt', 'uahi'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Git [[desd_cd_kdzb.yhdxx]] hgq lkl[1] @dzwk',
              'child_note_ids': [],
              'contexts': ['dzwk'],
              'create_date': FakeDate(2000, 1, 3),
              'links': ['desd_cd_kdzb.yhdxx'],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'vd_clxi', 'xoao'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Mcjr bdukfjxm 14521206',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'okwz', 'vd_clxi'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Spuekgphn 14521428',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'okwz', 'vd_clxi'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Necywz met td fuvbdooge 14524967',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'okwz', 'vd_clxi'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Fbtqtkb, fywupn qr mzrgsvqve 14521641',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'okwz', 'vd_clxi'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Uc lsmpfxhtkyh 14522952',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'okwz', 'vd_clxi'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Ikr lr 20 pggmb',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'fgifr'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Ttx-yecb mxovcuwbc',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'fgifr'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Rzq-itde mpfj',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'fgifr'],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Zee-lpfg uqogce bk khxsvgrkq bbgvmf',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': ['arms', 'fgifr'],
              'properties': {},
              'todo_payload': None,
              'zid': None}]}
  
  '''
# ---
# name: test_compile[YAMLConfigFile-subnotes]
  '''
  {'notes': [{'areas': [],
              'body': 'foobar',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': [],
              'properties': {'p': '1'},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': ' This todo is due::2024-03-30 and has some subnotes',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': [],
              'properties': {'due': '2024-03-30', 'p': '1'},
              'todo_payload': {'priority': 'C',
                               'status': <NoteStatus.OPEN_TODO: 2>},
              'zid': None},
             {'areas': [],
              'body': 'Todo subnote A',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': 2,
              'people': [],
              'prev_note_id': None,
              'projects': [],
              'properties': {'p': '1'},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Todo subnote B',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': 2,
              'people': [],
              'prev_note_id': None,
              'projects': [],
              'properties': {'p': '1'},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Todo subsubnote C',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': 4,
              'people': [],
              'prev_note_id': None,
              'projects': [],
              'properties': {'p': '1'},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'This note has many subnotes.',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': [],
              'properties': {'p': '1'},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': '2024-03-30 This note contains a key::value pair.',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDatetime(2024, 3, 30, 0, 0),
              'links': [],
              'next_note_id': None,
              'parent_note_id': 6,
              'people': [],
              'prev_note_id': None,
              'projects': [],
              'properties': {'key': 'value', 'p': '1'},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'bazbuz',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': 6,
              'people': [],
              'prev_note_id': None,
              'projects': [],
              'properties': {'p': '1'},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'pig',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': 6,
              'people': [],
              'prev_note_id': None,
              'projects': [],
              'properties': {'p': '1'},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'is fat',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': 9,
              'people': [],
              'prev_note_id': None,
              'projects': [],
              'properties': {'p': '1'},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'is stinky',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': 9,
              'people': [],
              'prev_note_id': None,
              'projects': [],
              'properties': {'p': '1'},
              'todo_payload': None,
              'zid': None}]}
  
  '''
# ---
# name: test_compile[YAMLConfigFile-subsections]
  '''
  {'notes': [{'areas': [],
              'body': 'Note about A1',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': [],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Note about something',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': [],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'Another note',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': [],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': ' A todo for something',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': [],
              'properties': {},
              'todo_payload': {'priority': 'C',
                               'status': <NoteStatus.OPEN_TODO: 2>},
              'zid': None},
             {'areas': [],
              'body': 'A note on the second section.',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': [],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'A sub-note.',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': [],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'And another note.',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': [],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': ' Some foobar todo.',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': [],
              'properties': {},
              'todo_payload': {'priority': 'C',
                               'status': <NoteStatus.OPEN_TODO: 2>},
              'zid': None},
             {'areas': [],
              'body': 'This is inside of h4_section!',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': [],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'A note on the third section.',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': [],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'A sub-note.',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': [],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': 'And another note.',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': [],
              'properties': {},
              'todo_payload': None,
              'zid': None},
             {'areas': [],
              'body': ' Some foobar todo.',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': [],
              'properties': {},
              'todo_payload': {'priority': 'C',
                               'status': <NoteStatus.OPEN_TODO: 2>},
              'zid': None},
             {'areas': [],
              'body': 'This is the final section!',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': [],
              'properties': {},
              'todo_payload': None,
              'zid': None}]}
  
  '''
# ---
# name: test_compile[YAMLConfigFile-tags_and_ids]
  '''
  {'notes': [{'areas': ['tags'],
              'body': '240408#0X Some note',
              'child_note_ids': [],
              'contexts': ['fat_pig'],
              'create_date': FakeDatetime(2024, 4, 8, 0, 0),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': ['foobar'],
              'properties': {},
              'todo_payload': None,
              'zid': '240408#0X'},
             {'areas': ['tags', 'thoughts'],
              'body': '301231#X0 When I talk to %pig I always want to @puke.',
              'child_note_ids': [],
              'contexts': ['fat_pig', 'puke'],
              'create_date': FakeDatetime(2030, 12, 31, 0, 0),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': ['pig'],
              'prev_note_id': None,
              'projects': ['bazbuz', 'foobar'],
              'properties': {},
              'todo_payload': None,
              'zid': '301231#X0'},
             {'areas': ['tags'],
              'body': '240408#NO Da nah nah nuh...',
              'child_note_ids': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note_id': None,
              'parent_note_id': None,
              'people': [],
              'prev_note_id': None,
              'projects': ['bad', 'to_the_bone'],
              'properties': {},
              'todo_payload': None,
              'zid': None}]}
  
  '''
# ---
